--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <script>
-          System.import('src/app.js');
-      </script> 
+          System.import('src/oop/index.js');
+      </script>
   </body>
 </html>
